--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -7,6 +7,7 @@
 	--color-gray-300: #dadada;
 	--color-gray-100: #f4f4f4;
 	--color-gray-50: #fdfdfd;
+	--color-red: #ff3333;
 
 	/** Шрифты */
 	--font-family-primary: 'Manrope', serif;
