--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,7 +9,7 @@ body {
 	font-weight: 400;
 	line-height: 1;
 	color: var(--color-01);
-	background-color: var(--color-05);
+	background-color: var(--color-gray-100);
 }
 
 header,
