--- a/src/common/components/Dropdown/Dropdown.module.scss
+++ b/src/common/components/Dropdown/Dropdown.module.scss
@@ -4,7 +4,7 @@
 @use 'Scss/base/z-index' as *;
 
 .dropdown {
-	position: relative;
+	flex-shrink: 0;
 }
 
 .trigger {
@@ -26,8 +26,9 @@
 .body {
 	position: absolute;
 	top: 100%;
-	left: 0;
+	right: 0;
 	z-index: $ui-index-4;
+	min-width: 200px;
 	display: grid;
 	grid-template-rows: 0fr;
 	opacity: 0;
@@ -37,6 +38,10 @@
 	background-color: var(--color-gray-50);
 	border-radius: 12px;
 	box-shadow: 0px 0px 2px 0px rgba(90, 90, 90, 1);
+
+	@include media-max-md {
+		min-width: 160px;
+	}
 }
 
 .inner {
@@ -61,7 +66,6 @@
 .item {
 	button {
 		padding: 8px 12px;
-		min-width: 184px;
 		@include T2-MEDIUM;
 		color: var(--color-black);
 		text-align: left;
@@ -71,10 +75,6 @@
 
 		@include hover {
 			color: var(--color-accent);
-		}
-
-		@include media-max-md {
-			min-width: 144px;
 		}
 	}
 }
