--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,7 +8,7 @@ body {
 	font-family: var(--font-family-primary);
 	font-weight: 400;
 	line-height: 1;
-	color: var(--color-01);
+	color: var(--color-black);
 	background-color: var(--color-gray-100);
 }
 
