--- a/src/common/components/Dropdown/Dropdown.module.scss
+++ b/src/common/components/Dropdown/Dropdown.module.scss
@@ -49,7 +49,7 @@
 }
 
 .body.open {
-	top: calc(100% + 20px);
+	top: calc(100% + 10px);
 	grid-template-rows: 1fr;
 	opacity: 1;
 	visibility: visible;
@@ -66,6 +66,7 @@
 .item {
 	button {
 		padding: 8px 12px;
+		width: 100%;
 		@include T2-MEDIUM;
 		color: var(--color-black);
 		text-align: left;
