--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -8,7 +8,6 @@
 	top: 0;
 	right: 0;
 	bottom: 0;
-	z-index: $ui-index-5;
 	padding: 52px;
 	display: flex;
 	justify-content: center;
@@ -16,6 +15,18 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgba(22, 22, 22, 0.24);
+	visibility: hidden;
+	pointer-events: none;
+	opacity: 0;
+	z-index: -1;
+	transition: all var(--transition-300);
+}
+
+.active {
+	opacity: 1;
+	z-index: 30;
+	visibility: visible;
+	pointer-events: all;
 }
 
 .modal {
