Исправлен баг с отчисткой инпута

--- a/src/common/components/Input/Input.module.scss
+++ b/src/common/components/Input/Input.module.scss
@@ -65,6 +65,11 @@
 	pointer-events: all;
 }
 
+.inner:has(input:active) .clear {
+	opacity: 1;
+	pointer-events: all;
+}
+
 .error {
 	@include CAPTION;
 	color: var(--color-red);
