--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -5,10 +5,7 @@
 
 .overlay {
 	position: fixed;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
+	inset: 0;
 	padding: 52px;
 	display: flex;
 	justify-content: center;
